Fix build break on EFL and GTK port since r180585. https://bugs.webkit.org/show_bug.cgi?id=141994

Reviewed by Joseph Pecoraro.

* UIProcess/WebsiteData/WebsiteDataRecord.cpp:
(WebKit::WebsiteDataRecord::displayNameForOrigin):
* UIProcess/WebsiteData/WebsiteDataRecord.h:
(WebKit::WebsiteDataRecord::WebsiteDataRecord):

Canonical link: https://commits.webkit.org/160018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180603 268f45cc-cd09-0410-ab3c-d52691b4dbfc